plugins {
    id 'com.android.application'
}

android {
    namespace 'com.qujindai.facelivtlab'
    compileSdk 36

    defaultConfig {
        applicationId 'com.qujindai.facelivtlab'
        minSdk 26
        targetSdk 36
        versionCode 6
        versionName '0.4.0'

        ndk {
            abiFilters 'arm64-v8a'
        }

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    androidResources {
        noCompress += ['onnx']
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.camera:camera-core:1.6.2'
    implementation 'androidx.camera:camera-camera2:1.6.2'
    implementation 'androidx.camera:camera-lifecycle:1.6.2'
    implementation 'androidx.camera:camera-view:1.6.2'
    implementation 'com.google.mlkit:face-detection:16.1.7'
    implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.29.0'
    testImplementation 'junit:junit:4.13.2'
}
